--- a/front-end/src/Assets/Stylesheet/Login.css
+++ b/front-end/src/Assets/Stylesheet/Login.css
@@ -4,14 +4,20 @@
 }
 
 .login-page{
-    width: 40%;
-    min-height: 40vh;
-    border: 1px solid rgb(183, 183, 183);
+    display: flex;
+    width: 80%;
+    min-height: 85vh;
+    border: 1px solid rgb(235, 229, 229);
     border-radius: 30px;
     padding: 20px;
     margin: auto;
     margin-top: 20px;
-    background: linear-gradient(90deg, rgba(241, 55, 55, 0.9810049019607843) 0%, rgba(32, 39, 136, 1) 100%);
+    background: linear-gradient(90deg, rgba(210, 238, 255, 0.981) 0%, rgb(33, 47, 240) 100%);
+    gap: 2rem;
+}
+.login-page .side-temp{
+    width: 45%;
+ 
 }
 .login-page h1{
     color: white;
@@ -20,23 +26,50 @@
 }
 
 .login-page form{
+    /* border: 1px solid red; */
     margin: auto;
     display: flex;
-    width: 80%;
+    width: 40%;
     flex-direction: column;
     gap: 1rem;
+    position: relative;
+    
+}
+.login-page form h1{
+    text-align: center;
+    font-size: 35px;
+    color: white;
+    margin-bottom: 40px;
+}
+.login-page form .emailLablel{
+    position: absolute;
+    top: 33.5%;
+    left: 10px;
+    pointer-events: none;
+}
+.input-box label{
+    transition: 0.3s;
+}
+.login-page form .passLablel{
+    position: absolute;
+    top: 56.5%;
+    left: 10px;
+    pointer-events: none;
+}
+.input-box input:focus~label, .input-box input:valid~label{
+    transform: translateY(-35px) translateX(-10px);
+    color: white;
 }
 
 .login-page form input{
-    margin: auto;
+    /* margin: auto; */
     outline: none;
     border-radius: 5px;
     width: 90%;
     height: 40px;
-    border: 2px solid rgb(218, 214, 214);
+    border: 2px solid rgb(240, 236, 236);
     padding: 5px;
 }
-
 .login-page form .forget-signup-link{
     display: flex;
     justify-content: space-between;
@@ -55,7 +88,7 @@
     width: 120px;
     height: 40px;
     border: none;
-    background-color: rgb(252, 49, 49);
+    background-color: #E40814;
     color: white;
     font-size: 17px;
     border-radius: 5px;
